# ProxyPilot

./: .env.example  .gitignore  .goreleaser.yml  .upstream-sync-sha  .upstream-sync-tag  Dockerfile  LICENSE  README.md  README_CN.md  TROUBLESHOOTING_ANTIGRAVITY.md  UPSTREAM_VERSION  WARP.md  config.example.yaml  docker-compose.yml  features.json  go.mod  go.sum  repro_merge.go  start-tui-web.bat  test_gjson.go
.factory/: init.sh  services.yaml
docs/: claude-code-local-proxy.md  cli.md  compat-matrix.md  desktop-app-build-process.md  desktop-ui-spec.md  long-context-features.md  memory.md  ppswitch.md  provider-migration-iflow-to-minimax-zhipu.md  proxypilot.md  rust-replatform.md  session-2026-01-11.md  session-2026-03-12.md  session-2026-03-17.md  session-2026-04-01.md  session-2026-04-03.md  session-2026-04-04.md  session-2026-04-05.md  session-2026-04-11.md  session-2026-04-12.md  session-2026-04-13.md  session-2026-04-16.md  session-2026-04-17.md  session-2026-04-18.md  session-2026-04-24.md  windows-ui-spec.md
installer/: build-msi.ps1  proxypilot.iss  proxypilot.wxs
installer-ui/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
internal/: memleak_repro_test.go
rust/: Cargo.toml
rust/proxypilot-rs/: Cargo.toml
rust/proxypilot-rs/src/: accounts.rs  auth_runtime.rs  claude.rs  cli.rs  codex.rs  config.rs  lib.rs  main.rs  provider.rs  provider_registry.rs  proxy.rs  state.rs  tui.rs
scripts/: README.md  build-cliproxyapi.ps1  build-cliproxytray.ps1  build-installer.ps1  (+13 more)
(+461 files in other folders)
